--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -1,10 +1,9 @@
 .benefits {
     background-color: var(----main-background);
     padding-bottom: 0;
-}
-
-.benefits .container {
-    display: flex;
+    .container {
+        display: flex;
+    }
 }
 
 .benefits-list {
