--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,9 +1,12 @@
-.header__logo {
+.logo {
     font-family: var(--text-font-second);
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
+}
+
+.header__logo {
     color: var(--main-blue);
 }
 
@@ -11,7 +14,17 @@
   display: inline-block;
 } */
 
-.logo__text--right {
+.header__logo-text--right {
     color: var(--first-text);
     margin-right: 93px;
+}
+
+.footer__logo {
+    color: var(--main-blue);
+    display: block;
+    margin-bottom: 20px;
+}
+
+.footer__logo-text--right-white {
+    color: #ffffff;
 }
